contact form test

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,17 @@
     <title>Pinnacle</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="first-name" />
+      <input type="text" name="last-name" />
+      <input type="email" name="email" />
+      <input type="file" name="file" />
+      <input type="checkbox" name="branding" />
+      <input type="checkbox" name="web-design" />
+      <input type="checkbox" name="ecommerce" />
+      <input type="checkbox" name="digital-marketting" />
+      <textarea name="message"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
