--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <input type="text" name="first-name" />
       <input type="text" name="last-name" />
       <input type="email" name="email" />
-      <input type="file" name="file" />
+      <input type="file" name="file-upload" />
       <input type="checkbox" name="branding" />
       <input type="checkbox" name="web-design" />
       <input type="checkbox" name="ecommerce" />
